--- a/ui/package.json
+++ b/ui/package.json
@@ -5,13 +5,14 @@
   "main": "index.js",
   "scripts": {
     "start": "http-server -p 3030 ./public",
+    "test": "echo \"Test specification to be created\"",
     "build": "webpack --config ./webpack/webpack.prod.js",
     "dev:build": "webpack --config ./webpack/webpack.dev.js",
     "dev:run": "npm run dev:build && webpack-dev-server --config ./webpack/webpack.dev.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/paulwizviz/react-skeleton.git"
+    "url": "git+https://github.com/paulwizviz/reactjs-dashboard.git"
   },
   "keywords": [
     "React",
@@ -35,12 +36,12 @@
     "eslint-loader": "^3.0.3",
     "eslint-plugin-react": "^7.18.3",
     "html-webpack-plugin": "^3.2.0",
-    "http-server": "^0.12.1",
+    "http-server": "^0.12.3",
     "mocha": "^7.1.0",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3",
+    "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^4.2.2"
   },
   "dependencies": {
