Update build and ops script (#3)
Signed-off-by: Paul Sitoh <paulwizviz@gmail.com>

--- a/deployments/docker-compose-prod.yaml
+++ b/deployments/docker-compose-prod.yaml
@@ -8,30 +8,30 @@ services:
             - 80:80
         container_name: router
         environment:
-            - NOXY_DEFAULT_HOST=ui
+            - NOXY_DEFAULT_HOST=ui-prod
             - NOXY_DEFAULT_PORT=3030
             - NOXY_DEFAULT_WS=1
             - NOXY_API_FRONT=/api
-            - NOXY_API_HOST=server
+            - NOXY_API_HOST=server-prod
             - NOXY_API_PORT=9000
         networks:
-            - react_dashboard_network
+            - openconsentia_react_dashboard_network
 
-    ui:
-        image: ${UI_IMAGE_NAME}:${IMAGE_TAG}
-        container_name: ui
+    ui-prod:
+        image: ${UI_IMAGE_PROD}:${IMAGE_TAG}
+        container_name: ui-prod
         expose:
             - 3030
         ports:
             - 3030:3030
-        volumes:
-            - ../ui/src:/opt/src
+        working_dir: /opt
+        command: ["npm", "start"]
         networks:
-            - react_dashboard_network
+            - openconsentia_react_dashboard_network
 
-    server:
-        image: ${SERVER_IMAGE_NAME}:${IMAGE_TAG}
-        container_name: server
+    server-prod:
+        image: ${SERVER_IMAGE}:${IMAGE_TAG}
+        container_name: server-prod
         expose:
             - 9000
         ports:
@@ -39,7 +39,7 @@ services:
         volumes: 
             - ../server/src:/opt/src
         networks:
-            - react_dashboard_network
+            - openconsentia_react_dashboard_network
 
 networks:
-    react_dashboard_network:
+    openconsentia_react_dashboard_network:
