--- a/ui/package.json
+++ b/ui/package.json
@@ -19,45 +19,5 @@
     "Redux"
   ],
   "author": "Paul Sitoh",
-  "license": "Apache-2.0",
-  "devDependencies": {
-    "@babel/core": "^7.11.1",
-    "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/plugin-proposal-export-default-from": "^7.10.4",
-    "@babel/polyfill": "^7.10.4",
-    "@babel/preset-env": "^7.11.0",
-    "@babel/preset-react": "^7.10.4",
-    "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.1.0",
-    "chai": "^4.2.0",
-    "copy-webpack-plugin": "^6.0.3",
-    "error-overlay-webpack-plugin": "^0.4.1",
-    "eslint": "^6.8.0",
-    "eslint-loader": "^3.0.4",
-    "eslint-plugin-react": "^7.20.6",
-    "html-webpack-plugin": "^3.2.0",
-    "http-server": "^0.12.3",
-    "mocha": "^7.2.0",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^4.2.2"
-  },
-  "dependencies": {
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.9.1",
-    "axios": "^0.19.2",
-    "classnames": "^2.2.6",
-    "clsx": "^1.1.1",
-    "history": "^4.10.1",
-    "prop-types": "^15.7.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-redux": "^7.2.1",
-    "react-router-dom": "^5.2.0",
-    "redux": "^4.0.5",
-    "redux-logger": "^3.0.6",
-    "redux-promise-middleware": "^6.1.2",
-    "redux-thunk": "^2.3.0"
-  }
+  "license": "Apache-2.0"
 }
