Refactor: Reorganise project structure (#5)
* Fix webpack

Change name from base to common. To follow general conventions.

Signed-off-by: Paul Sitoh <paulwizviz@gmail.com>

* Update script to install node mod

Add version numbers to tie module to specific version.

Signed-off-by: Paul Sitoh <paulwizviz@gmail.com>

* Fix operations script

To ensure that cli commands reflect its intention and ensure that number
of flags matches command type.

Signed-off-by: Paul Sitoh <paulwizviz@gmail.com>

* Initial refactor

Keeping original desktop view.

Signed-off-by: Paul Sitoh <paulwizviz@gmail.com>

* Finalise implementation

Signed-off-by: Paul Sitoh <paulwizviz@gmail.com>

--- a/deployments/docker-compose-dev.yaml
+++ b/deployments/docker-compose-dev.yaml
@@ -25,7 +25,11 @@ services:
         ports:
             - 3031:3031
         volumes:
+            - ../ui/webpack:/opt/webpack
+            - ../ui/images:/opt/images
             - ../ui/src:/opt/src
+            - ../ui/.eslintrc.json:/opt/.eslintrc.json
+            - ../ui/.babelrc:/opt/.babelrc
         networks:
             - openconsentia_react_dashboard_network
 
