--- a/ui/.eslintrc.json
+++ b/ui/.eslintrc.json
@@ -70,6 +70,7 @@
         "semi": [
             "error",
             "always"
-        ]
+        ],
+        "react/display-name": "off"
     }
 }
