Fix copyright and re-organise (#5)
Signed-off-by: Paul Sitoh <paulwizviz@gmail.com>

--- a/deployments/docker-compose.yaml
+++ b/deployments/docker-compose.yaml
@@ -8,18 +8,21 @@ services:
             - 80:80
         container_name: router
         environment:
-            - NOXY_DEFAULT_HOST=ui-dev
+            - NOXY_DEFAULT_HOST=ui
             - NOXY_DEFAULT_PORT=3031
             - NOXY_DEFAULT_WS=1
             - NOXY_API_FRONT=/api
-            - NOXY_API_HOST=server-dev
+            - NOXY_API_HOST=server
             - NOXY_API_PORT=9000
         networks:
             - paulwizviz_react_desktop_network
 
-    ui-dev:
-        image: ${UI_IMAGE_DEV}:${IMAGE_TAG}
-        container_name: ui-dev
+    ui:
+        build:
+            context: ../
+            dockerfile: ./build/ui.dev.dockerfile
+        image: ${UI_IMAGE}
+        container_name: ui
         expose:
             - 3031
         ports:
@@ -33,9 +36,12 @@ services:
         networks:
             - paulwizviz_react_desktop_network
 
-    server-dev:
-        image: ${SERVER_IMAGE}:${IMAGE_TAG}
-        container_name: server-dev
+    server:
+        build:
+            context: ../
+            dockerfile: ./build/server.dockerfile
+        image: ${SERVER_IMAGE}
+        container_name: server
         expose:
             - 9000
         ports:
